round-tripping WLI with detail page finished, need to polish edit page

--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
@@ -499,7 +499,7 @@
                                             
                                             <div class="row col-12">
                                                 <div class="col-6 text-right">
-                                                    <p><strong>Vacuum Relief Valve?: </strong></p>
+                                                    <p><strong>Vacuum Relief Valve? </strong></p>
                                                 </div>
                                                 <div class="col-6 text-left">
                                                     <p>{{inspection.HasVacuumReliefValve ? 'Yes' : 'No'}}
@@ -509,7 +509,7 @@
             
                                             <div class="row col-12">
                                                 <div class="col-6 text-right">
-                                                    <p><strong>Inspection Port?: </strong></p>
+                                                    <p><strong>Inspection Port? </strong></p>
                                                 </div>
                                                 <div class="col-6 text-left">
                                                     <p>{{inspection.HasInspectionPort ? 'Yes' : 'No'}}
