--- a/Source/Zybach.Web/src/app/pages/water-level-inspection-list/water-level-inspection-list.component.html
+++ b/Source/Zybach.Web/src/app/pages/water-level-inspection-list/water-level-inspection-list.component.html
@@ -10,6 +10,8 @@
         <div class="container col-12">
             <div class="row my-2">
                 <div class="col">
+                    <a class="btn btn-zybach btn-md mr-3 float-right" routerLink="/water-level-inspections/new"
+                    ngbTooltip="Create New Inspection"><span class="fas fa-plus"></span> New Inspection </a>
                     <button class="btn btn-secondary btn-md float-right mr-3" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
                     ngbTooltip="Download as CSV"><i class="fas fa-download"></i></button>
                     <fresca-clear-grid-filters-button class="mr-3 float-right" [grid]="waterLevelInspectionsGrid">
