--- a/Source/Zybach.Web/src/app/pages/sensor-detail/sensor-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/sensor-detail/sensor-detail.component.html
@@ -25,6 +25,10 @@
                                 <div class="col-12 col-sm-6 text-left">{{sensor.SensorTypeName}}</div>
                                 <div class="col-12 col-sm-6 label"><strong>Last Message Age (Hours): </strong></div>
                                 <div class="col-12 col-sm-6 text-left">{{sensor.MessageAge}}</div>
+                                <div class="col-12 col-sm-6 label"><strong>First Reading Date: </strong> </div>
+                                <div class="col-12 col-sm-6 text-left">{{sensor?.FirstReadingDate | date: "MM/dd/yyyy" }}</div>
+                                <div class="col-12 col-sm-6 label"><strong>Last Reading Date: </strong></div>
+                                <div class="col-12 col-sm-6 text-left">{{sensor?.LastReadingDate | date: "MM/dd/yyyy" }}</div>
                                 <div class="col-12 col-sm-6 label"><strong>Status: </strong></div>
                                 <div class="col-12 col-sm-6 text-left">
                                     <div class="btn-group btn-group-toggle float-left">
@@ -113,5 +117,49 @@
 
         </div>
     </div>
+
+    <div class="row mt-4">
+        <div class="col">
+            <div class="card">
+                <div class="card-header">
+                    Sensor Data Readings
+                    <a *ngIf="!noTimeSeriesData" class="btn btn-sm btn-zybach float-right" (click)="exportChartData()"><span class="fas fa-download"></span> Download CSV</a>
+                </div>
+                <div class="card-body">
+                    <div class="row" *ngIf="!timeSeries">
+                        <div class="col text-center">
+                            <span class="fas fa-spinner loading-spinner"></span>
+                            <p>Loading...</p>
+                        </div>
+                    </div>
+                    <div class="row" *ngIf="!noTimeSeriesData">
+                        <div class="input-group col-4">
+                            <span class="font-weight-bold mt-1 mx-3">Date Range:</span>
+                            <!-- input box -->
+                            <input id="dateRangeInput" class="form-control" name="mydate" placeholder="Select a date" 
+                                   angular-mydatepicker #dp="angular-mydatepicker" 
+                                   [(ngModel)]="dateRange" [options]="myDpOptions"
+                                   (dateChanged)="onDateChanged($event)"/>
+                          
+                            <!-- toggle calendar button -->
+                            <div class="input-group-append">
+                              <button type="button" class="btn btn-secondary" (click)="dp.toggleCalendar()">
+                                <i class="fa fa-calendar-o"></i>
+                              </button>
+                            </div>
+                          
+                          </div>
+                          <div class="col-2">
+                              <button type="button" class="btn btn-zybach" (click)="useFullDateRange()">Use Full Date Range</button>
+                          </div>
+
+                    </div>
+                    <div *ngIf="!noTimeSeriesData" id="{{chartID}}" style="width:100%; min-height: 340px;"></div>
+                    <em *ngIf="!noTimeSeriesData">All data are displayed in Central Daylight Time</em>
+                    <em *ngIf="noTimeSeriesData">No time series data available for this sensor.</em>
+                </div>
+            </div>
+        </div>
+    </div>  
 
 </div>
