adding alert on well detail page that there is a sensor that measures well pressure. added sensor type color for charts

--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -305,6 +305,7 @@
             <div class="card">
                 <div class="card-header">
                     Inspections
+                    <em class="small" *ngIf="hasWellPressureSensor()"> - This well has a well pressure sensor installed. Click on the sensor name above to view the water level readings for each sensor.</em>
                 </div>
                 <div class="card-body">
                     <div class="row">
