--- a/Source/Zybach.Web/src/app/shared/components/water-level-inspection-upsert/water-level-inspection-upsert.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/water-level-inspection-upsert/water-level-inspection-upsert.component.html
@@ -54,7 +54,7 @@
                         <label><strong>Measurement: </strong></label>
                     </div>
                     <div class="col-6 text-left mb-2">
-                        <input type="number" step="1" class="form-control" name="MV" [(ngModel)]="inspection.Measurement" />
+                        <input type="text" class="form-control" name="Measurement" [(ngModel)]="inspection.Measurement" />
                     </div>
                 
 
