--- a/Source/Zybach.Web/src/app/shared/components/water-level-inspection-upsert/water-level-inspection-upsert.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/water-level-inspection-upsert/water-level-inspection-upsert.component.html
@@ -54,7 +54,8 @@
                         <label><strong>Measurement: </strong></label>
                     </div>
                     <div class="col-6 text-left mb-2">
-                        <input type="text" class="form-control" name="Measurement" [(ngModel)]="inspection.Measurement" />
+                        <input type="text" class="form-control" name="Measurement" [(ngModel)]="inspection.Measurement" 
+                        [dropSpecialCharacters]="false" mask="0*.0000" />
                     </div>
                 
 
