--- a/Source/Zybach.Web/src/app/pages/water-level-inspection-edit/water-level-inspection-edit.component.html
+++ b/Source/Zybach.Web/src/app/pages/water-level-inspection-edit/water-level-inspection-edit.component.html
@@ -40,7 +40,7 @@
                 Save
             </button>
             <a class="btn btn-secondary ml-1"
-                routerLink="/water-level-inspections/{{waterLevelInspectionID}}">
+                routerLink="..">
                 Cancel
             </a>
         </div>
