--- a/Source/Zybach.Web/src/app/pages/water-level-inspection-new/water-level-inspection-new.component.html
+++ b/Source/Zybach.Web/src/app/pages/water-level-inspection-new/water-level-inspection-new.component.html
@@ -39,7 +39,7 @@
                 Save
             </button>
             <a class="btn btn-secondary ml-1"
-                routerLink="/water-level-inspections">
+                routerLink="..">
                 Cancel
             </a>
         </div>
