--- a/Source/Zybach.Web/src/app/pages/water-quality-inspection-new/water-quality-inspection-new.component.html
+++ b/Source/Zybach.Web/src/app/pages/water-quality-inspection-new/water-quality-inspection-new.component.html
@@ -41,7 +41,7 @@
                 Save
             </button>
             <a class="btn btn-secondary ml-1"
-                routerLink="/water-quality-inspections">
+                routerLink="..">
                 Cancel
             </a>
         </div>
