only fetching and displaying wells with inspections

--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -92,6 +92,9 @@
                     <a routerLink="/reports/ndee-report" class="dropdown-item">
                         NDEE Chemicals Report
                     </a>
+                    <a routerLink="/reports/well-inspections-report" class="dropdown-item">
+                        Well Inspections Report
+                    </a>
                 </div>
             </li>
         </ul>
